@@ -2,6 +2,8 @@ Revision history for libfq
 
 0.7.0	2024-??-??
 	- Add function FQfirebirdApiVersion()
+	- Add function FQplanStatement()
+	- Function FQexplainStatement() now returns the explained plan
 
 
 0.6.1	2024-05-11
